temporal chages